--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "pg": "^8.4.2",
     "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.1",
+    "socket.io": "^3.1.1",
     "uuid": "^8.3.2",
     "ws": "^7.4.3"
   },
